--- a/pss-parents/pom.xml
+++ b/pss-parents/pom.xml
@@ -36,11 +36,18 @@
 		<aliyun-sdk-vod-upload.version>1.4.5</aliyun-sdk-vod-upload.version>
 		<fastjson.version>1.2.28</fastjson.version>
 		<json.version>20170516</json.version>
+		<pss-version>1.0.0</pss-version>
 	</properties>
 
 	<dependencyManagement>
 
 		<dependencies>
+
+			<dependency>
+				<groupId>com.systop.pss</groupId>
+				<artifactId>pss-common</artifactId>
+				<version>${pss-version}</version>
+			</dependency>
 
 			<!--mybatis-plus 持久层 -->
 			<dependency>
@@ -174,7 +181,7 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-	
+
 	<build>
 		<plugins>
 			<plugin>
